k8s/infrastructure/pihole/tooling/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-rajsingh-info-tls
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: haproxy
  rules:
    - host: pihole.tooling.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  name: http
  tls:
    - secretName: pihole-rajsingh-info-tls
      hosts:
        - pihole.tooling.rajsingh.info
